YAPIS/2/.antlr/ExprGrammarParser.java
// Generated from /home/smn/BSUIR_6/YAPIS/2/ExprGrammarParser.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExprGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASSIGN=1, EQUAL=2, PLUS=3, MINUS=4, MULTIPLY=5, DIVIDE=6, EXCLAMATION=7, 
		LESS=8, MOR=9, IF=10, AND=11, OR=12, ELSE=13, SWITCH=14, CASE=15, DEFAULT=16, 
		SEMI=17, TYPE=18, INT=19, OPERATOR_ID=20, WS=21, Point=22, LEFT_BR=23, 
		RIGHT_BR=24, LEFT_FIG=25, RIGHT_FIG=26, COMMA=27, AMPERSANT=28, RETURN=29, 
		FUNCTION=30, FOR=31, COLON=32, WHILE=33, STRING=34, ID=35;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_methodUsage = 2, RULE_fieldUsage = 3, 
		RULE_functionUsage = 4, RULE_block = 5, RULE_func = 6, RULE_loop = 7, 
		RULE_for_loop = 8, RULE_while_loop = 9, RULE_brackets_expr = 10, RULE_baseExpr = 11, 
		RULE_asiignmentExpression = 12, RULE_unaryExpr = 13, RULE_atomExpr = 14, 
		RULE_binaryExpr = 15, RULE_mulExpr = 16, RULE_logicExpression = 17, RULE_condition = 18, 
		RULE_if_cond = 19, RULE_switch_cond = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "methodUsage", "fieldUsage", "functionUsage", 
			"block", "func", "loop", "for_loop", "while_loop", "brackets_expr", "baseExpr", 
			"asiignmentExpression", "unaryExpr", "atomExpr", "binaryExpr", "mulExpr", 
			"logicExpression", "condition", "if_cond", "switch_cond"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'=='", "'+'", "'-'", "'*'", "'/'", "'!'", "'<'", "'>'", 
			"'if'", "'and'", "'or'", "'else'", "'switch'", "'case'", "'default'", 
			"';'", null, null, null, null, "'.'", "'('", "')'", "'{'", "'}'", "','", 
			"'&'", "'return'", "'func'", "'for'", "':'", "'while'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ASSIGN", "EQUAL", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "EXCLAMATION", 
			"LESS", "MOR", "IF", "AND", "OR", "ELSE", "SWITCH", "CASE", "DEFAULT", 
			"SEMI", "TYPE", "INT", "OPERATOR_ID", "WS", "Point", "LEFT_BR", "RIGHT_BR", 
			"LEFT_FIG", "RIGHT_FIG", "COMMA", "AMPERSANT", "RETURN", "FUNCTION", 
			"FOR", "COLON", "WHILE", "STRING", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExprGrammarParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ExprGrammarParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(42);
				statement();
				}
				}
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ASSIGN) | (1L << MINUS) | (1L << EXCLAMATION) | (1L << IF) | (1L << SWITCH) | (1L << TYPE) | (1L << INT) | (1L << LEFT_BR) | (1L << FUNCTION) | (1L << FOR) | (1L << WHILE) | (1L << STRING) | (1L << ID))) != 0) );
			setState(47);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public AsiignmentExpressionContext asiignmentExpression() {
			return getRuleContext(AsiignmentExpressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ExprGrammarParser.SEMI, 0); }
		public UnaryExprContext unaryExpr() {
			return getRuleContext(UnaryExprContext.class,0);
		}
		public MethodUsageContext methodUsage() {
			return getRuleContext(MethodUsageContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				func();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				loop();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				condition();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(52);
				asiignmentExpression();
				setState(53);
				match(SEMI);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(55);
				unaryExpr();
				setState(56);
				match(SEMI);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(58);
				methodUsage();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodUsageContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ExprGrammarParser.ID, 0); }
		public List<FunctionUsageContext> functionUsage() {
			return getRuleContexts(FunctionUsageContext.class);
		}
		public FunctionUsageContext functionUsage(int i) {
			return getRuleContext(FunctionUsageContext.class,i);
		}
		public List<TerminalNode> Point() { return getTokens(ExprGrammarParser.Point); }
		public TerminalNode Point(int i) {
			return getToken(ExprGrammarParser.Point, i);
		}
		public MethodUsageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodUsage; }
	}

	public final MethodUsageContext methodUsage() throws RecognitionException {
		MethodUsageContext _localctx = new MethodUsageContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_methodUsage);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(61);
				match(ID);
				}
				break;
			case 2:
				{
				setState(62);
				functionUsage();
				}
				break;
			}
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(65);
				match(Point);
				setState(66);
				functionUsage();
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Point );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldUsageContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ExprGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ExprGrammarParser.ID, i);
		}
		public List<TerminalNode> Point() { return getTokens(ExprGrammarParser.Point); }
		public TerminalNode Point(int i) {
			return getToken(ExprGrammarParser.Point, i);
		}
		public FieldUsageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldUsage; }
	}

	public final FieldUsageContext fieldUsage() throws RecognitionException {
		FieldUsageContext _localctx = new FieldUsageContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fieldUsage);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(ID);
			setState(74); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(72);
				match(Point);
				setState(73);
				match(ID);
				}
				}
				setState(76); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Point );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionUsageContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ExprGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ExprGrammarParser.ID, i);
		}
		public TerminalNode LEFT_BR() { return getToken(ExprGrammarParser.LEFT_BR, 0); }
		public TerminalNode RIGHT_BR() { return getToken(ExprGrammarParser.RIGHT_BR, 0); }
		public List<FieldUsageContext> fieldUsage() {
			return getRuleContexts(FieldUsageContext.class);
		}
		public FieldUsageContext fieldUsage(int i) {
			return getRuleContext(FieldUsageContext.class,i);
		}
		public List<TerminalNode> STRING() { return getTokens(ExprGrammarParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(ExprGrammarParser.STRING, i);
		}
		public List<FunctionUsageContext> functionUsage() {
			return getRuleContexts(FunctionUsageContext.class);
		}
		public FunctionUsageContext functionUsage(int i) {
			return getRuleContext(FunctionUsageContext.class,i);
		}
		public List<BaseExprContext> baseExpr() {
			return getRuleContexts(BaseExprContext.class);
		}
		public BaseExprContext baseExpr(int i) {
			return getRuleContext(BaseExprContext.class,i);
		}
		public List<TerminalNode> AMPERSANT() { return getTokens(ExprGrammarParser.AMPERSANT); }
		public TerminalNode AMPERSANT(int i) {
			return getToken(ExprGrammarParser.AMPERSANT, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ExprGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ExprGrammarParser.COMMA, i);
		}
		public FunctionUsageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionUsage; }
	}

	public final FunctionUsageContext functionUsage() throws RecognitionException {
		FunctionUsageContext _localctx = new FunctionUsageContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionUsage);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(ID);
			setState(79);
			match(LEFT_BR);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << EXCLAMATION) | (1L << TYPE) | (1L << INT) | (1L << LEFT_BR) | (1L << AMPERSANT) | (1L << STRING) | (1L << ID))) != 0)) {
				{
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AMPERSANT) {
					{
					setState(80);
					match(AMPERSANT);
					}
				}

				setState(88);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(83);
					match(ID);
					}
					break;
				case 2:
					{
					setState(84);
					fieldUsage();
					}
					break;
				case 3:
					{
					setState(85);
					match(STRING);
					}
					break;
				case 4:
					{
					setState(86);
					functionUsage();
					}
					break;
				case 5:
					{
					setState(87);
					baseExpr();
					}
					break;
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(90);
					match(COMMA);
					setState(92);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==AMPERSANT) {
						{
						setState(91);
						match(AMPERSANT);
						}
					}

					setState(99);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						setState(94);
						match(ID);
						}
						break;
					case 2:
						{
						setState(95);
						fieldUsage();
						}
						break;
					case 3:
						{
						setState(96);
						match(STRING);
						}
						break;
					case 4:
						{
						setState(97);
						functionUsage();
						}
						break;
					case 5:
						{
						setState(98);
						baseExpr();
						}
						break;
					}
					}
					}
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(108);
			match(RIGHT_BR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LEFT_FIG() { return getToken(ExprGrammarParser.LEFT_FIG, 0); }
		public TerminalNode RIGHT_FIG() { return getToken(ExprGrammarParser.RIGHT_FIG, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode SEMI() { return getToken(ExprGrammarParser.SEMI, 0); }
		public TerminalNode RETURN() { return getToken(ExprGrammarParser.RETURN, 0); }
		public BaseExprContext baseExpr() {
			return getRuleContext(BaseExprContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(LEFT_FIG);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ASSIGN) | (1L << MINUS) | (1L << EXCLAMATION) | (1L << IF) | (1L << SWITCH) | (1L << TYPE) | (1L << INT) | (1L << LEFT_BR) | (1L << FUNCTION) | (1L << FOR) | (1L << WHILE) | (1L << STRING) | (1L << ID))) != 0)) {
				{
				{
				setState(111);
				statement();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURN) {
				{
				{
				setState(117);
				match(RETURN);
				setState(118);
				baseExpr();
				}
				setState(120);
				match(SEMI);
				}
			}

			setState(124);
			match(RIGHT_FIG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public TerminalNode LEFT_BR() { return getToken(ExprGrammarParser.LEFT_BR, 0); }
		public TerminalNode RIGHT_BR() { return getToken(ExprGrammarParser.RIGHT_BR, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<TerminalNode> TYPE() { return getTokens(ExprGrammarParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(ExprGrammarParser.TYPE, i);
		}
		public TerminalNode FUNCTION() { return getToken(ExprGrammarParser.FUNCTION, 0); }
		public List<TerminalNode> ID() { return getTokens(ExprGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ExprGrammarParser.ID, i);
		}
		public TerminalNode OPERATOR_ID() { return getToken(ExprGrammarParser.OPERATOR_ID, 0); }
		public List<TerminalNode> AMPERSANT() { return getTokens(ExprGrammarParser.AMPERSANT); }
		public TerminalNode AMPERSANT(int i) {
			return getToken(ExprGrammarParser.AMPERSANT, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ExprGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ExprGrammarParser.COMMA, i);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_la = _input.LA(1);
			if ( !(_la==TYPE || _la==FUNCTION) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(127);
			_la = _input.LA(1);
			if ( !(_la==OPERATOR_ID || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(128);
			match(LEFT_BR);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(129);
				match(TYPE);
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AMPERSANT) {
					{
					setState(130);
					match(AMPERSANT);
					}
				}

				setState(133);
				match(ID);
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(134);
					match(COMMA);
					setState(135);
					match(TYPE);
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==AMPERSANT) {
						{
						setState(136);
						match(AMPERSANT);
						}
					}

					setState(139);
					match(ID);
					}
					}
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(147);
			match(RIGHT_BR);
			setState(148);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopContext extends ParserRuleContext {
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public While_loopContext while_loop() {
			return getRuleContext(While_loopContext.class,0);
		}
		public LoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loop; }
	}

	public final LoopContext loop() throws RecognitionException {
		LoopContext _localctx = new LoopContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_loop);
		try {
			setState(152);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				for_loop();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				while_loop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class For_loopContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(ExprGrammarParser.FOR, 0); }
		public TerminalNode LEFT_BR() { return getToken(ExprGrammarParser.LEFT_BR, 0); }
		public TerminalNode TYPE() { return getToken(ExprGrammarParser.TYPE, 0); }
		public TerminalNode ID() { return getToken(ExprGrammarParser.ID, 0); }
		public TerminalNode COLON() { return getToken(ExprGrammarParser.COLON, 0); }
		public BaseExprContext baseExpr() {
			return getRuleContext(BaseExprContext.class,0);
		}
		public TerminalNode RIGHT_BR() { return getToken(ExprGrammarParser.RIGHT_BR, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public For_loopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_loop; }
	}

	public final For_loopContext for_loop() throws RecognitionException {
		For_loopContext _localctx = new For_loopContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_for_loop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(FOR);
			setState(155);
			match(LEFT_BR);
			setState(156);
			match(TYPE);
			setState(157);
			match(ID);
			setState(158);
			match(COLON);
			setState(159);
			baseExpr();
			setState(160);
			match(RIGHT_BR);
			setState(161);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_loopContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(ExprGrammarParser.WHILE, 0); }
		public TerminalNode LEFT_BR() { return getToken(ExprGrammarParser.LEFT_BR, 0); }
		public BaseExprContext baseExpr() {
			return getRuleContext(BaseExprContext.class,0);
		}
		public TerminalNode RIGHT_BR() { return getToken(ExprGrammarParser.RIGHT_BR, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public While_loopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_loop; }
	}

	public final While_loopContext while_loop() throws RecognitionException {
		While_loopContext _localctx = new While_loopContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_while_loop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(WHILE);
			setState(164);
			match(LEFT_BR);
			setState(165);
			baseExpr();
			setState(166);
			match(RIGHT_BR);
			setState(167);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Brackets_exprContext extends ParserRuleContext {
		public TerminalNode LEFT_BR() { return getToken(ExprGrammarParser.LEFT_BR, 0); }
		public BaseExprContext baseExpr() {
			return getRuleContext(BaseExprContext.class,0);
		}
		public TerminalNode RIGHT_BR() { return getToken(ExprGrammarParser.RIGHT_BR, 0); }
		public Brackets_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_brackets_expr; }
	}

	public final Brackets_exprContext brackets_expr() throws RecognitionException {
		Brackets_exprContext _localctx = new Brackets_exprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_brackets_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(LEFT_BR);
			setState(170);
			baseExpr();
			setState(171);
			match(RIGHT_BR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BaseExprContext extends ParserRuleContext {
		public UnaryExprContext unaryExpr() {
			return getRuleContext(UnaryExprContext.class,0);
		}
		public Brackets_exprContext brackets_expr() {
			return getRuleContext(Brackets_exprContext.class,0);
		}
		public LogicExpressionContext logicExpression() {
			return getRuleContext(LogicExpressionContext.class,0);
		}
		public BaseExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseExpr; }
	}

	public final BaseExprContext baseExpr() throws RecognitionException {
		BaseExprContext _localctx = new BaseExprContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_baseExpr);
		try {
			setState(176);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(173);
				unaryExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(174);
				brackets_expr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(175);
				logicExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsiignmentExpressionContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(ExprGrammarParser.ASSIGN, 0); }
		public BaseExprContext baseExpr() {
			return getRuleContext(BaseExprContext.class,0);
		}
		public TerminalNode TYPE() { return getToken(ExprGrammarParser.TYPE, 0); }
		public List<TerminalNode> ID() { return getTokens(ExprGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ExprGrammarParser.ID, i);
		}
		public List<FieldUsageContext> fieldUsage() {
			return getRuleContexts(FieldUsageContext.class);
		}
		public FieldUsageContext fieldUsage(int i) {
			return getRuleContext(FieldUsageContext.class,i);
		}
		public AsiignmentExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asiignmentExpression; }
	}

	public final AsiignmentExpressionContext asiignmentExpression() throws RecognitionException {
		AsiignmentExpressionContext _localctx = new AsiignmentExpressionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_asiignmentExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(178);
				match(TYPE);
				}
			}

			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				setState(183);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
				case 1:
					{
					setState(181);
					match(ID);
					}
					break;
				case 2:
					{
					setState(182);
					fieldUsage();
					}
					break;
				}
				}
				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(188);
			match(ASSIGN);
			setState(189);
			baseExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnaryExprContext extends ParserRuleContext {
		public BinaryExprContext binaryExpr() {
			return getRuleContext(BinaryExprContext.class,0);
		}
		public TerminalNode EXCLAMATION() { return getToken(ExprGrammarParser.EXCLAMATION, 0); }
		public TerminalNode MINUS() { return getToken(ExprGrammarParser.MINUS, 0); }
		public UnaryExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryExpr; }
	}
